maquetacion del spinner

--- a/src/app/components/short-url/short-url.component.html
+++ b/src/app/components/short-url/short-url.component.html
@@ -19,7 +19,7 @@
     <div class="col-lg-8">
       <div class="form-group">
         <input type="text" [(ngModel)]="urlShort" class="form-control form-control-lg" placeholder="URL procesada"
-          id="inputDefault">
+          id="inputDefault" readonly="">
       </div>
     </div>
   </div>
