--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
   <div class="container-fluid">
-    <span class="navbar-brand" href="#">SHORT URL</span>
+    <span class="navbar-brand title">SHORT URL</span>
   </div>
 </nav>
